Started data assessment (identified an incorrect datatype in tweet_data_df_clean)

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -480,6 +480,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Quality\n",
+    "<ul> \n",
+    "    <li>tweet_data_df_clean:</li>\n",
+    "        <ol>\n",
+    "            <li></li>\n",
+    "        </ol>\n",
+    "    <li>image_predictions_clean</li>\n",
+    "    <li>twitter_archive_clean</li>\n",
+    "</ul>        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tidiness\n",
+    "<ul> \n",
+    "    <li>tweet_data_df_clean:</li>\n",
+    "        <ol>\n",
+    "            <li>timestamp is not in the correct datatype</li>\n",
+    "        </ol>\n",
+    "    <li>image_predictions_clean</li>\n",
+    "    <li>twitter_archive_clean</li>\n",
+    "</ul>        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>retweets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tue Aug 01 16:23:56 +0000 2017</td>\n",
+       "      <td>35562</td>\n",
+       "      <td>892420643555336193</td>\n",
+       "      <td>7534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tue Aug 01 00:17:27 +0000 2017</td>\n",
+       "      <td>30753</td>\n",
+       "      <td>892177421306343426</td>\n",
+       "      <td>5589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mon Jul 31 00:18:03 +0000 2017</td>\n",
+       "      <td>23130</td>\n",
+       "      <td>891815181378084864</td>\n",
+       "      <td>3703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sun Jul 30 15:58:51 +0000 2017</td>\n",
+       "      <td>38869</td>\n",
+       "      <td>891689557279858688</td>\n",
+       "      <td>7717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sat Jul 29 16:00:24 +0000 2017</td>\n",
+       "      <td>37129</td>\n",
+       "      <td>891327558926688256</td>\n",
+       "      <td>8316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2326</th>\n",
+       "      <td>Mon Nov 16 00:24:50 +0000 2015</td>\n",
+       "      <td>95</td>\n",
+       "      <td>666049248165822465</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2327</th>\n",
+       "      <td>Mon Nov 16 00:04:52 +0000 2015</td>\n",
+       "      <td>265</td>\n",
+       "      <td>666044226329800704</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2328</th>\n",
+       "      <td>Sun Nov 15 23:21:54 +0000 2015</td>\n",
+       "      <td>110</td>\n",
+       "      <td>666033412701032449</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2329</th>\n",
+       "      <td>Sun Nov 15 23:05:30 +0000 2015</td>\n",
+       "      <td>119</td>\n",
+       "      <td>666029285002620928</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330</th>\n",
+       "      <td>Sun Nov 15 22:32:08 +0000 2015</td>\n",
+       "      <td>2368</td>\n",
+       "      <td>666020888022790149</td>\n",
+       "      <td>455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2331 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           timestamp  likes            tweet_id  retweets\n",
+       "0     Tue Aug 01 16:23:56 +0000 2017  35562  892420643555336193      7534\n",
+       "1     Tue Aug 01 00:17:27 +0000 2017  30753  892177421306343426      5589\n",
+       "2     Mon Jul 31 00:18:03 +0000 2017  23130  891815181378084864      3703\n",
+       "3     Sun Jul 30 15:58:51 +0000 2017  38869  891689557279858688      7717\n",
+       "4     Sat Jul 29 16:00:24 +0000 2017  37129  891327558926688256      8316\n",
+       "...                              ...    ...                 ...       ...\n",
+       "2326  Mon Nov 16 00:24:50 +0000 2015     95  666049248165822465        40\n",
+       "2327  Mon Nov 16 00:04:52 +0000 2015    265  666044226329800704       126\n",
+       "2328  Sun Nov 15 23:21:54 +0000 2015    110  666033412701032449        39\n",
+       "2329  Sun Nov 15 23:05:30 +0000 2015    119  666029285002620928        41\n",
+       "2330  Sun Nov 15 22:32:08 +0000 2015   2368  666020888022790149       455\n",
+       "\n",
+       "[2331 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_data_df_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2331 entries, 0 to 2330\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   timestamp  2331 non-null   object\n",
+      " 1   likes      2331 non-null   int64 \n",
+      " 2   tweet_id   2331 non-null   int64 \n",
+      " 3   retweets   2331 non-null   int64 \n",
+      "dtypes: int64(3), object(1)\n",
+      "memory usage: 73.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweet_data_df_clean.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
