Adjusted formatting for data quality and tidiness list

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -485,24 +485,28 @@
    "source": [
     "#### Quality\n",
     "<ul> \n",
-    "    <li>tweet_data_df_clean:\n",
-    "        <ol>\n",
-    "            <li>timestamp data provides more data than necessary</li>\n",
-    "            <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
-    "            <li>timestamp is datatype is an object and it should be datetime</li>\n",
-    "            <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "        </ol>\n",
-    "    </li>\n",
-    "    <li>image_predictions_clean\n",
-    "        <ol>\n",
-    "            <li>inconsistent formatting for the names potential image matches</li>\n",
-    "            <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
-    "            <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
-    "            <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
-    "            tweet_id datatype is int64 and it should be a string\n",
-    "        </ol>\n",
-    "    </li>\n",
-    "    <li>twitter_archive_clean\n",
+    "    <p>\n",
+    "        <li><em>tweet_data_df_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>timestamp data provides more data than necessary</li>\n",
+    "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
+    "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
+    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <li><em>image_predictions_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>inconsistent formatting for the names potential image matches</li>\n",
+    "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
+    "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
+    "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
+    "                tweet_id datatype is int64 and it should be a string\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "    <li><em>twitter_archive_clean:</em>\n",
     "        <ol>\n",
     "            <li>there are more data entries in twitter_archive_clean than there are in both image_predictions_clean and tweet_data_df_clean, meaning there are tweets which do not have images associated with them in the image database, nor retweet/like information</li>\n",
     "            <li>there are null values for in_reply_to_status_id, in_reply_to_user_id, retweeted_status_id, retweeted_status_user_id, and retweeted_status_timestamp</li>\n",
@@ -522,23 +526,27 @@
    "metadata": {},
    "source": [
     "#### Tidiness\n",
-    "<ul> \n",
-    "    <li>tweet_data_df_clean:\n",
-    "        <ol>\n",
-    "            <li>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</li>\n",
-    "        </ol>\n",
-    "    </li>\n",
-    "    <li>image_predictions_clean\n",
-    "        <ol>\n",
-    "            <li>image_predictions_clean data could be condensed and combined with twitter_archive_clean, though it also may be better off on its own due to the nature of its content, image identification vs basic tweet information. </li>\n",
-    "        </ol>\n",
-    "    </li>\n",
-    "    <li>twitter_archive_clean\n",
-    "        <ol>\n",
-    "            <li>dog stages are in four different columns</li>\n",
-    "            <li>source and expanded url provide the same information</li>\n",
-    "        </ol>\n",
-    "    </li>\n",
+    "<ul>\n",
+    "    <p>\n",
+    "        <li><em>tweet_data_df_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <li><em>image_predictions_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>image_predictions_clean data could be condensed and combined with twitter_archive_clean, though it also may be better off on its own due to the nature of its content, image identification vs basic tweet information. </li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "        <li><em>twitter_archive_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>dog stages are in four different columns</li>\n",
+    "                <li>source and expanded url provide the same information</li>\n",
+    "            </ol>\n",
+    "        </li>\n",
     "</ul>        "
    ]
   },
