Added data quality issue caused by first data tidiness cleaning step

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -517,7 +517,8 @@
     "            <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "            <li>inaccurate rating_numerator and rating_denominator informatin</li>\n",
     "            <li>source column contains usless information</li>\n",
-    "            <li>expanded_url sometimes replicates the url</li>            \n",
+    "            <li>expanded_url sometimes replicates the url</li>\n",
+    "            <li>combi\n",
     "        </ol>\n",
     "    </li>\n",
     "</ul>        "
@@ -4255,11 +4256,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<em><b>Define</b></em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "extract the tweet url from the text into its own column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Code</b></em>"
+   ]
   }
  ],
  "metadata": {
