Updated potential image match names to be consistent in image_predictions_clean

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -498,7 +498,7 @@
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
     "            <ol>\n",
-    "                <li>inconsistent formatting for the names potential image matches</li>\n",
+    "                <li><del>inconsistent formatting for the names of potential image matches in p1, p2, and p3</del></li>\n",
     "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
     "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
     "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
@@ -5079,6 +5079,7 @@
    },
    "outputs": [],
    "source": [
+    "# https://stackoverflow.com/questions/25351968/how-to-display-full-non-truncated-dataframe-information-in-html-when-convertin\n",
     "pd.set_option('display.max_colwidth', None)"
    ]
   },
@@ -5318,6 +5319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://thispointer.com/python-pandas-how-to-drop-rows-in-dataframe-by-conditions-on-column-values/\n",
     "twitter_archive_clean.drop(indexes, inplace=True)"
    ]
   },
@@ -5427,6 +5429,204 @@
    ],
    "source": [
     "twitter_archive_clean[twitter_archive_clean['url'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. inconsistent formatting for the names of potential image matches in p1, p2, and p3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Define</b></em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Replace the separation '\\_' with a space and make all entries lowercase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Code</b></em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_predictions_clean.p1 = image_predictions_clean.p1.str.replace('_', ' ').str.lower()\n",
+    "image_predictions_clean.p2 = image_predictions_clean.p2.str.replace('_', ' ').str.lower()\n",
+    "image_predictions_clean.p3 = image_predictions_clean.p3.str.replace('_', ' ').str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Test</b></em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p1_conf</th>\n",
+       "      <th>p1_dog</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p2_conf</th>\n",
+       "      <th>p2_dog</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p3_conf</th>\n",
+       "      <th>p3_dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>666020888022790149</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>welsh springer spaniel</td>\n",
+       "      <td>0.465074</td>\n",
+       "      <td>True</td>\n",
+       "      <td>collie</td>\n",
+       "      <td>0.156665</td>\n",
+       "      <td>True</td>\n",
+       "      <td>shetland sheepdog</td>\n",
+       "      <td>0.061428</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>666029285002620928</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.506826</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature pinscher</td>\n",
+       "      <td>0.074192</td>\n",
+       "      <td>True</td>\n",
+       "      <td>rhodesian ridgeback</td>\n",
+       "      <td>0.072010</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>666033412701032449</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>german shepherd</td>\n",
+       "      <td>0.596461</td>\n",
+       "      <td>True</td>\n",
+       "      <td>malinois</td>\n",
+       "      <td>0.138584</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bloodhound</td>\n",
+       "      <td>0.116197</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>666044226329800704</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rhodesian ridgeback</td>\n",
+       "      <td>0.408143</td>\n",
+       "      <td>True</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.360687</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature pinscher</td>\n",
+       "      <td>0.222752</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>666049248165822465</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>miniature pinscher</td>\n",
+       "      <td>0.560311</td>\n",
+       "      <td>True</td>\n",
+       "      <td>rottweiler</td>\n",
+       "      <td>0.243682</td>\n",
+       "      <td>True</td>\n",
+       "      <td>doberman</td>\n",
+       "      <td>0.154629</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id                                          jpg_url  \\\n",
+       "0  666020888022790149  https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg   \n",
+       "1  666029285002620928  https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg   \n",
+       "2  666033412701032449  https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg   \n",
+       "3  666044226329800704  https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg   \n",
+       "4  666049248165822465  https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg   \n",
+       "\n",
+       "   img_num                      p1   p1_conf  p1_dog                  p2  \\\n",
+       "0        1  welsh springer spaniel  0.465074    True              collie   \n",
+       "1        1                 redbone  0.506826    True  miniature pinscher   \n",
+       "2        1         german shepherd  0.596461    True            malinois   \n",
+       "3        1     rhodesian ridgeback  0.408143    True             redbone   \n",
+       "4        1      miniature pinscher  0.560311    True          rottweiler   \n",
+       "\n",
+       "    p2_conf  p2_dog                   p3   p3_conf  p3_dog  \n",
+       "0  0.156665    True    shetland sheepdog  0.061428    True  \n",
+       "1  0.074192    True  rhodesian ridgeback  0.072010    True  \n",
+       "2  0.138584    True           bloodhound  0.116197    True  \n",
+       "3  0.360687    True   miniature pinscher  0.222752    True  \n",
+       "4  0.243682    True             doberman  0.154629    True  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_predictions_clean.head()"
    ]
   },
   {
