--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -4580,8 +4580,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Maybe add p1 guess from images to twitter archive if the image is a dog, use for loop?</b>"
+    "# <span style=\"color:blue\"><b>Maybe add p1 guess from images to twitter archive if the image is a dog, use for loop?</b></span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. four categories are used for dog stage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5630,11 +5700,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. tweet_id is an int in both twitter_archive_clean and image_predictions_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Define</b></em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correct datatype in both dfs with .astype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Code</b></em>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "twitter_archive_clean.tweet_id = twitter_archive_clean.tweet_id.astype('str')\n",
+    "image_predictions_clean.tweet_id = image_predictions_clean.tweet_id.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Test</b></em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2075 entries, 0 to 2074\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   tweet_id  2075 non-null   object \n",
+      " 1   jpg_url   2075 non-null   object \n",
+      " 2   img_num   2075 non-null   int64  \n",
+      " 3   p1        2075 non-null   object \n",
+      " 4   p1_conf   2075 non-null   float64\n",
+      " 5   p1_dog    2075 non-null   bool   \n",
+      " 6   p2        2075 non-null   object \n",
+      " 7   p2_conf   2075 non-null   float64\n",
+      " 8   p2_dog    2075 non-null   bool   \n",
+      " 9   p3        2075 non-null   object \n",
+      " 10  p3_conf   2075 non-null   float64\n",
+      " 11  p3_dog    2075 non-null   bool   \n",
+      "dtypes: bool(3), float64(3), int64(1), object(5)\n",
+      "memory usage: 152.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_predictions_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2094 entries, 0 to 2355\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   tweet_id            2094 non-null   object        \n",
+      " 1   source              2094 non-null   object        \n",
+      " 2   text                2094 non-null   object        \n",
+      " 3   expanded_urls       2094 non-null   object        \n",
+      " 4   rating_numerator    2094 non-null   int64         \n",
+      " 5   rating_denominator  2094 non-null   int64         \n",
+      " 6   name                2094 non-null   object        \n",
+      " 7   doggo               2094 non-null   object        \n",
+      " 8   floofer             2094 non-null   object        \n",
+      " 9   pupper              2094 non-null   object        \n",
+      " 10  puppo               2094 non-null   object        \n",
+      " 11  likes               2087 non-null   float64       \n",
+      " 12  retweets            2087 non-null   float64       \n",
+      " 13  url                 2094 non-null   object        \n",
+      " 14  timestamp           2094 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(2), int64(2), object(10)\n",
+      "memory usage: 261.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. "
+   ]
   }
  ],
  "metadata": {
