Fixed url column by adding missing https back to each url

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -487,6 +487,81 @@
     "#### Quality\n",
     "<ul> \n",
     "    <p>\n",
+    "        <li><em>tweet_data_df_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
+    "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
+    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "            </ol>\n",
+    "            </del></li>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <li><em>image_predictions_clean:</em>\n",
+    "            <ol>\n",
+    "                <li><del>inconsistent formatting for the names of potential image matches in p1, p2, and p3</del></li>\n",
+    "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
+    "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
+    "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
+    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "    <li><em>twitter_archive_clean:</em>\n",
+    "        <ol>\n",
+    "            <li><del>rows which are retweets or replies are unnecessary</del></li>\n",
+    "            <li><del>retweet and reply related columns are unnecessary after the related rows are removed</del></li>           \n",
+    "            <li><del>tweet_id datatype is int64 and it should be a string</del></li>\n",
+    "            <li>there are 59 rows missing expanded_urls data</li>\n",
+    "            <li><del>timestamp is datatype is an object and it should be datetime</del></li>\n",
+    "            <li>inaccurate rating_numerator and rating_denominator informatin</li>\n",
+    "            <li>source column contains usless information</li>\n",
+    "            <li>expanded_url sometimes replicates the url</li>            \n",
+    "            <li>url column created with split is missing https</li>\n",
+    "            <li><del>fix remaining timestamp column's name</del></li>\n",
+    "            <li><del>timestamp data provides more data than necessary</del></li>\n",
+    "            <li><del>3 url rows did not successfully split the text column in Tidiness #2</del></li>\n",
+    "        </ol>\n",
+    "    </li>\n",
+    "</ul>        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tidiness\n",
+    "<ul>\n",
+    "    <p>\n",
+    "        <li><em>tweet_data_df_clean:</em>\n",
+    "            <ol>\n",
+    "                <li><del>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</del></li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "    <p>\n",
+    "        <li><em>image_predictions_clean:</em>\n",
+    "            <ol>\n",
+    "                <li>image_predictions_clean data could be condensed and combined with twitter_archive_clean, though it also may be better off on its own due to the nature of its content, image identification vs basic tweet information. </li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "    </p>\n",
+    "        <li><em>twitter_archive_clean:</em>\n",
+    "            <ol>\n",
+    "                <li><del>dog stages are in four different columns</del></li>\n",
+    "                <li><del>text column has both a url and the tweet text</del></li>\n",
+    "                <li><del>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</del></li>\n",
+    "            </ol>\n",
+    "        </li>\n",
+    "</ul>        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Quality\n",
+    "<ul> \n",
+    "    <p>\n",
     "        <li><del><em>tweet_data_df_clean:</em>\n",
     "            <ol>\n",
     "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
@@ -5997,8 +6072,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9.  "
+    "### 9.  url column created with split is missing https"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Define</b></em>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add https to the wrong of each item in the created url column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Code</b></em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "://t.co/roqIxCvEB3    2\n",
+       "://t.co/Fd5WFDTMH4    1\n",
+       "://t.co/RXdzWaCQHm    1\n",
+       "://t.co/wnsblfu7XE    1\n",
+       "://t.co/YKvt0J5MXr    1\n",
+       "                     ..\n",
+       "://t.co/0twoigv5jP    1\n",
+       "://t.co/iCk7zstRA9    1\n",
+       "://t.co/bg4TqvvkuF    1\n",
+       "://t.co/brCQoqc8AW    1\n",
+       "://t.co/rvSANEsQZJ    1\n",
+       "Name: url, Length: 2093, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.url.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_archive_clean['url'] = 'https' + twitter_archive_clean.url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<em><b>Test</b></em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       https://t.co/MgUWQ76dJU\n",
+       "1       https://t.co/0Xxu71qeIV\n",
+       "2       https://t.co/wUnZnhtVJB\n",
+       "3       https://t.co/tD36da7qLQ\n",
+       "4       https://t.co/AtUZn91f7f\n",
+       "                 ...           \n",
+       "2351    https://t.co/4B7cOc1EDq\n",
+       "2352    https://t.co/DWnyCjf2mx\n",
+       "2353    https://t.co/y671yMhoiR\n",
+       "2354    https://t.co/r7mOb2m0UI\n",
+       "2355    https://t.co/BLDqew2Ijj\n",
+       "Name: url, Length: 2094, dtype: object"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
