Added a copy of tidiness and quality issues

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -493,12 +493,12 @@
     "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
     "            </ol>\n",
-    "            </del></li>\n",
+    "            </li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
     "            <ol>\n",
-    "                <li><del>inconsistent formatting for the names of potential image matches in p1, p2, and p3</del></li>\n",
+    "                <li>inconsistent formatting for the names of potential image matches in p1, p2, and p3</li>\n",
     "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
     "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
     "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
@@ -508,18 +508,18 @@
     "    </p>\n",
     "    <li><em>twitter_archive_clean:</em>\n",
     "        <ol>\n",
-    "            <li><del>rows which are retweets or replies are unnecessary</del></li>\n",
-    "            <li><del>retweet and reply related columns are unnecessary after the related rows are removed</del></li>           \n",
-    "            <li><del>tweet_id datatype is int64 and it should be a string</del></li>\n",
+    "            <li>rows which are retweets or replies are unnecessary</li>\n",
+    "            <li>retweet and reply related columns are unnecessary after the related rows are removed</li>           \n",
+    "            <li>tweet_id datatype is int64 and it should be a string</li>\n",
     "            <li>there are 59 rows missing expanded_urls data</li>\n",
-    "            <li><del>timestamp is datatype is an object and it should be datetime</del></li>\n",
+    "            <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "            <li>inaccurate rating_numerator and rating_denominator informatin</li>\n",
     "            <li>source column contains usless information</li>\n",
     "            <li>expanded_url sometimes replicates the url</li>            \n",
     "            <li>url column created with split is missing https</li>\n",
-    "            <li><del>fix remaining timestamp column's name</del></li>\n",
-    "            <li><del>timestamp data provides more data than necessary</del></li>\n",
-    "            <li><del>3 url rows did not successfully split the text column in Tidiness #2</del></li>\n",
+    "            <li>fix remaining timestamp column's name</li>\n",
+    "            <li>timestamp data provides more data than necessary</li>\n",
+    "            <li>3 url rows did not successfully split the text column in Tidiness #2</li>\n",
     "        </ol>\n",
     "    </li>\n",
     "</ul>        "
@@ -534,7 +534,7 @@
     "    <p>\n",
     "        <li><em>tweet_data_df_clean:</em>\n",
     "            <ol>\n",
-    "                <li><del>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</del></li>\n",
+    "                <li>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</li>\n",
     "            </ol>\n",
     "        </li>\n",
     "    </p>\n",
@@ -547,9 +547,9 @@
     "    </p>\n",
     "        <li><em>twitter_archive_clean:</em>\n",
     "            <ol>\n",
-    "                <li><del>dog stages are in four different columns</del></li>\n",
-    "                <li><del>text column has both a url and the tweet text</del></li>\n",
-    "                <li><del>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</del></li>\n",
+    "                <li>dog stages are in four different columns</li>\n",
+    "                <li>text column has both a url and the tweet text</li>\n",
+    "                <li>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</li>\n",
     "            </ol>\n",
     "        </li>\n",
     "</ul>        "
@@ -591,7 +591,7 @@
     "            <li>inaccurate rating_numerator and rating_denominator informatin</li>\n",
     "            <li>source column contains usless information</li>\n",
     "            <li>expanded_url sometimes replicates the url</li>            \n",
-    "            <li>url column created with split is missing https</li>\n",
+    "            <li><del>url column created with split is missing https</del></li>\n",
     "            <li><del>fix remaining timestamp column's name</del></li>\n",
     "            <li><del>timestamp data provides more data than necessary</del></li>\n",
     "            <li><del>3 url rows did not successfully split the text column in Tidiness #2</del></li>\n",
@@ -6176,9 +6176,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2094 entries, 0 to 2355\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype         \n",
+      "---  ------              --------------  -----         \n",
+      " 0   tweet_id            2094 non-null   object        \n",
+      " 1   source              2094 non-null   object        \n",
+      " 2   text                2094 non-null   object        \n",
+      " 3   expanded_urls       2094 non-null   object        \n",
+      " 4   rating_numerator    2094 non-null   int64         \n",
+      " 5   rating_denominator  2094 non-null   int64         \n",
+      " 6   name                2094 non-null   object        \n",
+      " 7   likes               2087 non-null   float64       \n",
+      " 8   retweets            2087 non-null   float64       \n",
+      " 9   url                 2094 non-null   object        \n",
+      " 10  dog_stage           2094 non-null   object        \n",
+      " 11  timestamp           2094 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(2), int64(2), object(7)\n",
+      "memory usage: 212.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "twitter_archive_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
